# layout-parser

./: CHANGELOG.md  pyproject.toml  setup.py
src/layoutparser/: __init__.py  file_utils.py  visualization.py
src/layoutparser/io/: basic.py  pdf.py
src/layoutparser/models/: base_catalog.py
src/layoutparser/models/detectron2/: catalog.py  layoutmodel.py
src/layoutparser/models/effdet/: catalog.py
src/layoutparser/models/paddledetection/: catalog.py
src/layoutparser/ocr/: __init__.py  gcv_agent.py
tests/: test_io.py  test_model.py  test_ocr.py  test_visualization.py
tests/fixtures/model/: config.yml
tests/fixtures/ocr/: test_tesseract_response.pickle
