[project]
name = "layoutparser"
version = "0.4.0"
description = "A unified toolkit for Deep Learning Based Document Image Analysis"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.12"
authors = [
    { name = "Zejiang Shen, Ruochen Zhang, and Layout Parser Model Contributors", email = "layoutparser@gmail.com" },
]
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy",
    "opencv-python",
    "scipy",
    "pandas",
    "pillow",
    "pyyaml>=5.1",
    "pooch",
    "pdfplumber @ git+https://github.com/IgorTavcar/pdfplumber.git",
    "pdf2image",
]

[project.optional-dependencies]
ocr = [
    "google-cloud-vision>=3.1",
    "pytesseract",
]
gcv = [
    "google-cloud-vision>=3.1",
]
tesseract = [
    "pytesseract",
]
layoutmodels = [
    "torch",
    "torchvision",
    "effdet",
]
effdet = [
    "torch",
    "torchvision",
    "effdet",
]
paddledetection = [
    "paddlepaddle>=2.1.0",
]

[project.urls]
Homepage = "https://github.com/Layout-Parser/layout-parser"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/layoutparser"]

[tool.hatch.build.targets.sdist]
include = [
    "src/layoutparser/",
    "LICENSE",
    "README.md",
]
